# banking_api_entrix

./: .env-sample  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 24a84265df8a_init_db.py
app/api/: deps.py
app/api/api_v1/: api_router.py
app/api/api_v1/endpoints/: account.py  customer.py  employee.py  history.py  transaction.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_employee.py  crud_history.py
app/db/: base_class.py  init_db.py
app/models/: __init__.py  account.py  customer.py  employee.py  history.py
app/schemas/: __init__.py  account.py  base.py  customer.py  employee.py  history.py  transaction.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_account.py  test_customer.py  test_employee.py  test_history.py  test_transaction.py
app/tests/utils/: utils.py
scripts/: entry_point.sh  format-imports.sh  test.sh
